[package]
name = "rui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rui"
path = "src/lib.rs"

[[bin]]
name = "rui-test"
path = "src/main.rs"


[dependencies]
glow = "0.13.1"
sdl2 = "0.36.0"
swash = "0.1.13"
